# Rodent

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  package.json  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
blog/: index.html
blog/2024/07/28/changing-our-documentation-for-the-better/: index.html
blog/archive/2024/: index.html
blog/category/announcements/: index.html
docs/: index.md
docs/.vitepress/: config.mjs
docs/blog/: .authors.yml  index.md
docs/blog/posts/: changing-docs.md
docs/guides/: getting-started.md  index.md
guides/addons/: index.html
guides/getting-started/: index.html
json/: metadata-schema.json
json/schemas/: metadata-schema.json  rodent-schema.json
json/templates/: metadata-template.json  rodent-template.json
overrides/partials/: comments.html
search/: search_index.json
